Facebook Auth added w/o session

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,10 @@
   <head>
 
     <title>QueriesAndSols</title>
+
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/font-awesome.css">
+    <link rel="stylesheet" href="/css/bootstrap-social.css">
     <link rel="stylesheet" href="/css/jt.css">
     <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">
 </head>
