FB and G+ login with Session added(cloud)

--- a/views/main/login.ejs
+++ b/views/main/login.ejs
@@ -6,5 +6,7 @@
 <a class="btn btn-block btn-social btn-facebook " href="/auth/facebook">
     <i class="fa fa-facebook"></i>Sign in with facebok
 </a>
-
+<a class="btn btn-block btn-social btn-google " href="/auth/google">
+    <i class="fa fa-google"></i>Sign in with google
+</a>
 </div>
