--- a/views/main/login.ejs
+++ b/views/main/login.ejs
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/font-awesome.css">
+<script src="https://use.fontawesome.com/da438c86d8.js"></script>
 <link rel="stylesheet" href="/css/bootstrap-social.css">
 
-<div>
+<div style="width:50%">
 <a class="btn btn-block btn-social btn-facebook " href="/auth/facebook">
     <i class="fa fa-facebook"></i>Sign in with facebok
 </a>
