--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,7 +11,7 @@
         </div>
         <div id="navbar" class="navbar-collapse navbar-form navbar-right collapse">
         <h5>Hello, <%= user.name%>(<%=user.id%>)</h5>
-          <a href="/" class="btn btn-default">Questions</a>
+          <a href="/home" class="btn btn-default">Questions</a>
             <button id='askbutton' class="btn btn-success">Ask a Question</button>
 
 
